[package]
name = "distributed-wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl-sys = "0.9.77"
serde = { version = "1.0.147", features = ["derive"] }
warp = "0.3"
rand = "0.8.5"
wasmtime = "3.0.1"
wasmtime-wasi = "3.0.1"
anyhow = "1.0.66"
wasi-common = "3.0.1"